--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "maatwebsite/excel": "^3.1",
+        "phpmailer/phpmailer": "^6.7",
         "psr/simple-cache": "2.0",
         "realrashid/sweet-alert": "^5.1",
         "yajra/laravel-datatables-oracle": "^10.0"
