--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "phpmailer/phpmailer": "^6.7",
         "psr/simple-cache": "2.0",
         "realrashid/sweet-alert": "^5.1",
+        "spatie/laravel-permission": "^6.16",
         "yajra/laravel-datatables-oracle": "^10.0"
     },
     "require-dev": {
